--- a/backend/package.json
+++ b/backend/package.json
@@ -9,12 +9,6 @@
     "dev": "concurrently \"npx tsc --watch\" \"nodemon -q dist/server.js\"",
     "test": "jest -i"
   },
-  "jest": {
-    "testPathIgnorePatterns": [
-      "/node_modules/",
-      "config.js"
-    ]
-  },
   "author": "Gabriel",
   "license": "ISC",
   "dependencies": {
@@ -29,14 +23,19 @@
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.17",
+    "@types/jest": "^29.5.1",
     "@types/jsonwebtoken": "^9.0.2",
     "@types/morgan": "^1.9.4",
     "@types/node": "^20.2.3",
     "@types/pg": "^8.10.1",
+    "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^5.59.7",
     "@typescript-eslint/parser": "^5.59.7",
     "concurrently": "^8.0.1",
     "eslint": "^8.41.0",
+    "jest": "^29.5.0",
+    "supertest": "^6.3.3",
+    "ts-jest": "^29.1.0",
     "typescript": "^5.0.4"
   }
 }
