--- a/backend/package.json
+++ b/backend/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "dist/server.js",
   "scripts": {
-    "build": "npx tsc",
+    "build": "npx tsc --project tsconfig.build.json",
     "start": "node dist/server.js",
-    "dev": "concurrently \"npx tsc --watch\" \"nodemon -q dist/server.js\"",
+    "dev": "concurrently \"npx tsc --project tsconfig.build.json --watch\" \"nodemon -q dist/server.js\"",
     "test": "jest -i"
   },
   "author": "Gabriel",
