--- a/backend/package.json
+++ b/backend/package.json
@@ -30,6 +30,7 @@
     "@types/express-ws": "^3.0.1",
     "@types/jest": "^29.5.1",
     "@types/jsonwebtoken": "^9.0.2",
+    "@types/lodash": "^4.14.195",
     "@types/morgan": "^1.9.4",
     "@types/node": "^20.2.3",
     "@types/pg": "^8.10.1",
