--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "@types/react-dom": "^18.2.4",
     "axios": "^1.4.0",
     "dayjs": "^1.11.8",
+    "jest-environment-jsdom": "^29.5.0",
     "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -26,6 +27,7 @@
     "react-router-dom": "^6.11.2",
     "react-scripts": "5.0.1",
     "redux-thunk": "^2.4.2",
+    "ts-jest": "^29.1.0",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
