--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "axios": "^1.4.0",
     "dayjs": "^1.11.8",
     "jest-environment-jsdom": "^29.5.0",
+    "jest-websocket-mock": "^2.4.0",
     "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
